--- a/manifest.json
+++ b/manifest.json
@@ -8,14 +8,44 @@
     "orientation": "portrait-primary",
     "icons": [
       {
-        "src": "/assets/img/favicon.png",
+        "src": "/assets/images/favicon.png",
         "type": "image/png", 
         "sizes": "72x72"
       },
       {
-        "src": "/assets/img/mobile.png",
+        "src": "/assets/images/mobile.png",
         "type": "image/png",
         "sizes": "96x96"
+      },
+      {
+        "src": "/assets/img/favicon.png",
+        "type": "image/png",
+        "sizes": "128x128"
+      },
+      {
+        "src": "/assets/img/favicon.pngg",
+        "type": "image/png",
+        "sizes": "144x144"
+      },
+      {
+        "src": "/assets/img/favicon.png",
+        "type": "image/png",
+        "sizes": "152x152"
+      },
+      {
+        "src": "/assets/img/favicon.png",
+        "type": "image/png",
+        "sizes": "192x192"
+      },
+      {
+        "src": "/assets/img/favicon.png",
+        "type": "image/png",
+        "sizes": "384x384"
+      }, 
+      {
+        "src": "/assets/img/favicon.png",
+        "type": "image/png",
+        "sizes": "512x512"
       }
     ]
   }
