--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Ishan Sharma | ishandeveloper",
     "short_name": "Ishan Sharma",
-    "start_url": "/index.html",
+    "start_url": "/Portfolio/index.html",
     "display": "standalone",
     "background_color": "#FFFFFF",
     "theme_color": "#444444", 
